<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    tools:context=".Activities.Menu.EmployerMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- logo -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>

        <!-- Catalog button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/catalog_button_text"
            android:onClick="openCatalogActivity"/>

        <!-- My offers button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/my_offers_button_text"
            android:onClick="openMyOffersActivity" />

        <!-- My offers history button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/my_offers_history_button_text"
            android:onClick="openMyOffersHistoryActivity"/>

        <!-- My virtual profile button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/my_virtual_profile_button_text"
            android:onClick="openMyVirtualProfileActivity"/>

        <!-- Settings button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_button_text"
            android:onClick="openSettingsActivity"/>

        <!-- Logout button button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button_text"
            android:onClick="logout"/>

    </LinearLayout>

</ScrollView>