<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/profile_creator__step_two_text"
        style="@style/ProfileCreatorTextStyle"/>

    <!-- Phone label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_field_hint"/>

    <!-- Phone field -->
    <EditText
        android:id="@+id/profile_creator__phone_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <!-- State label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/state_field_hint"/>

    <!-- State spinner -->
    <Spinner
        android:id="@+id/profile_creator__state_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/state_array"/>

    <!-- City label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/city_field_hint"/>

    <!-- City field -->
    <EditText
        android:id="@+id/profile_creator__city_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"/>

    <!-- Birthday label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/birthday_field_hint"/>

    <!-- Birthday picker -->
    <DatePicker
        android:id="@+id/profile_creator__birthday_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>


</LinearLayout>