<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".Activities.Offers.AddOfferActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_offer__name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/offer_name_field_hint"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <!-- Salary type label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/salary_type_field_hint"
            android:textColor="@android:color/white"/>

        <!-- Salary type spinner -->
        <Spinner
            android:id="@+id/add_offer__salary_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/salary_type_array"/>

        <!-- Salary -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_offer__salary_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_offer__salary_label"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <!-- State type label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/state_field_hint"
            android:textColor="@android:color/white"/>

        <!-- State spinner -->
        <Spinner
            android:id="@+id/add_offer__state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/state_array"/>

        <!-- City field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_offer__city_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_field_hint"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <!-- Address field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_offer__address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_field_hint"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <!-- Start time label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_offer__start_time_label"
            android:textColor="@android:color/white"/>

        <!-- Start time button -->
        <Button
            android:id="@+id/add_offer__start_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/choose_start_time_button_text"
            android:onClick="selectStartTime"/>

        <!-- Description field -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_offer__description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_field_hint"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <!-- Add offer button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_offer_button_text"
            android:onClick="addOffer"/>

    </LinearLayout>

</ScrollView>