<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/profile_creator__step_three_text"
        style="@style/ProfileCreatorTextStyle"/>

    <!-- Hobby label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hobby_field_hint"/>

    <!-- Hobby field -->
    <EditText
        android:id="@+id/profile_creator__hobby_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"/>

    <!-- Description label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description_field_hint"/>

    <!-- Description field -->
    <EditText
        android:id="@+id/profile_creator__description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"/>

    <!-- Confirm button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/finish_button_text"
        android:onClick="createProfile"/>

</LinearLayout>